Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7500

[C++][Dataset] regex_error in hive partition on centos7 and opensuse42

    XMLWordPrintableJSON

Details

    Description

      See https://github.com/apache/arrow/runs/373769666#step:5:3301 and https://github.com/apache/arrow/runs/373769676#step:5:3297:

       

      ══ Failed ══════════════════════════════════════════════════════════════════════
      ── 1. Error: Hive partitioning (@test-dataset.R#89)  ───────────────────────────
      regex_error
      Backtrace:
        1. arrow::open_dataset(...) testthat/test-dataset.R:89:2
       12. dsd$Finish(schema)
       15. arrow:::dataset___DSDiscovery__Finish2(self, schema)
      

       

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h