ARROW-7500: [C++][Dataset] Remove std::regex usage